# gemininini

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  request.rs  state.rs
src/elements/: mod.rs  wrapped_text.rs
src/font/: uf2.rs
