[package]
name = "gemininini"
version = "0.0.1"
authors = ["Maya"]
edition = "2021"
readme = "README.md"
description = "Gemini client with vim bindings and uf2 fonts"
repository = "https://github.com/mayakarabula/gemininini/"
license = "MIT"
keywords = ["gemini"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.2", features = ["net", "macros", "rt", "time", "io-util", "rt-multi-thread"] }
url = "2.2"
gemini-fetch = "0.2.1"
winit = "0.28.0"
winit_input_helper = "0.14.0"
psf2 = "0.4.0"
pixels = "0.13.0"
lexopt = "0.3.0"
